--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.16.4",
     "@mui/material": "^5.16.4",
+    "@tanstack/react-query": "^5.52.1",
     "axios": "^1.7.2",
     "cors": "^2.8.5",
     "node-sass": "^9.0.0",
